<resources>
    <string name="app_name">BanBajio</string>
    <string name="userText">Ingresa tu usuario</string>
    <string name="passText">Ingresa tu contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="menu">Menú</string>
    <string name="logoDesc">Logo BanBajio</string>
    <string name="add">Agregar</string>
    <string name="search">Buscar</string>
    <string name="tvReg">Registro de nueva valija</string>
    <!--Datos para el registro de la nueva valija-->
    <string name="depEnvio">Departamento que envia</string>
    <string name="depRecibe">Departamento que recibe</string>
    <string name="fechaCreacion">Fecha de creación de valija</string>
    <string name="fechaEnvio">Fecha de envío</string>
    <string name="ciudadDestino">Ciudad de destino</string>
    <string name="ciudadEnvio">Ciudad de envio</string>
    <string name="descripcion">Descripcion del paquete</string>
    <string name="numValija">Número de valija</string>
    <string name="leon">León</string>
    <!--Datos para el registro de la nueva valija-->
    <string name="registrar">Registrar</string>
    <string name="searchDato">Ingresa el dato a buscar</string>

</resources>
