<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logoDesc"
        android:layout_width="239dp"
        android:layout_height="157dp"
        app:srcCompat="@drawable/banbajio"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="80dp"/>

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/userText"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/text"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passText"
        android:textColorHint="@color/colorAccent"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/text"
        android:inputType="numberPassword"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/btnLogin"
        android:textColor="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"/>

</LinearLayout>