<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Inicio">
<!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"/>
-->

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/logoDesc"
        android:layout_width="239dp"
        android:layout_height="157dp"
        app:srcCompat="@drawable/banbajio"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="80dp"/>

    <Button
        android:id="@+id/btnAdd"
        android:text="@string/add"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnSearch"
        android:text="@string/search"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="30dp"/>


</LinearLayout>